--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 23 19:41:17 EEST 2022
-sdk.dir=C\:\\Users\\User11\\AppData\\Local\\Android\\Sdk
+#Tue Oct 11 18:33:47 EEST 2022
+sdk.dir=/home/raiku/JetBrains/Android/sdk
