--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 20 17:52:58 EEST 2022
-sdk.dir=C\:\\Users\\User11\\AppData\\Local\\Android\\Sdk
+#Fri Oct 21 17:16:30 EEST 2022
+sdk.dir=/home/raiku/JetBrains/Android/sdk
