--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 21 17:16:30 EEST 2022
-sdk.dir=/home/raiku/JetBrains/Android/sdk
+#Fri Dec 09 17:41:55 EET 2022
+sdk.dir=C\:\\Users\\User11\\AppData\\Local\\Android\\Sdk
