--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'org.openftc:easyopencv:1.5.2'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation 'org.openftc:apriltag:1.1.0'
+    implementation 'org.ftclib.ftclib:core:2.0.1'
 }
