--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,6 +25,11 @@ android {
     androidResources {
         noCompress 'tflite'
     }
+
+}
+
+repositories {
+  maven { url = 'https://jitpack.io' }
 }
 
 dependencies {
@@ -37,4 +42,5 @@ dependencies {
     //implementation 'com.acmerobotics.roadrunner:core:0.5.6'
     implementation 'org.openftc:apriltag:1.1.0'
     implementation 'org.ftclib.ftclib:core:2.0.1'
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.4'
 }
