--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,18 @@
  */
 
 buildscript {
+    ext.kotlin_version = "1.7.20"
+    ext.supportLibVersion = "25.3.0"
+
     repositories {
         mavenCentral()
         google()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.3.1'
     }
 }
 
