--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 org.gradle.jvmargs=-Xmx4096m
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
